# University-Assignments

Advanced Programming/: CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
Computational Biology/: README.md
Computational Biology/ex1/: EX1_CA_2022_1 (2).doc  ex1.py  דוח ביוח תרגיל 1.docx
Computational Biology/ex2/: 208289827_207256991.docx  7_tricky.txt  avg.csv  best.csv  ex2_best.py  example_5.txt  example_5_tricky.txt  example_6_easy.txt  example_7_easy.txt  generations.csv  statistics.py
Computational Biology/ex3/: 208289827_207256991.docx  data.csv  ex3.py  test.py  ~$כנית קוד.docx
Computational Biology/ex4/: 208289827_207256991.docx  EX_MC_2022 (1).doc
Computational Genomics/: README.md
Computational Genomics/1st Assignment/: תרגיל_בית_1_UCSC (2).docx
Computational Genomics/2nd Assignment/: ex2_5.sh  תרגיל בית 2 (3).docx
Computational Genomics/3rd Assignment/: _4a.sh  _4b.sh  _4c.sh  _5a.sh  _5b.sh  _5c.sh  _6.sh  תרגיל 3 (1).docx
Computational Genomics/4th Assignment/: ex_4.sh  תרגיל 4 (2).docx
Lamut/: README.md
Lamut/ex3/: ex3_bad_input_genomic_sequences.txt  ex3_bad_input_patterns.csv  ex3_bad_inputs.json  ex3_input_patterns.csv  ex3_inputs.json  ex3_output_patterns.csv  exercise3_207256991_208812628.py
Machine Learning and Applications for Biological Data Analysis/: README.md
Machine Learning/ex1/: ex1.py  (+9 more)
(+79 files in other folders)
